moving sub menu to right side but facing an overflow issue, only when its on the right though

--- a/styles.css
+++ b/styles.css
@@ -3490,10 +3490,10 @@ iframe {
     width: 95%;
   }
 
-  body.open-menu {
+  /* body.open-menu {
     overflow-x: hidden;
     overflow-y: scroll;
-  }
+  } */
 
   .burger-menu {
     -ms-flex-align: center;
@@ -3645,9 +3645,9 @@ iframe {
     -webkit-box-shadow: -2px 5px 15px rgba(0, 0, 0, 0.75);
     -webkit-transition: right 250ms ease;
     border-bottom: solid 1px #000;
-    border-right: solid 1px #000;
-    box-shadow: 2px 5px 15px rgba(0, 0, 0, 0.75);
-    right: -300px;
+    border-left: solid 1px #000;
+    box-shadow: -2px 5px 15px rgba(0, 0, 0, 0.75);
+    right: -250px;
     position: absolute;
     transition: right 250ms ease;
     z-index: 1;
@@ -3660,7 +3660,7 @@ iframe {
   #dashboard-left-nav-links li.active span {
     -webkit-box-shadow: inset -3px 0 0 #FF0000;
     background-color: #333333;
-    box-shadow: inset -3px 0 0 #FF0000;
+    box-shadow: inset 3px 0 0 #FF0000;
   }
 
   #dashboard-right-nav-container-header {
